--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "cli": "^1.0.1",
     "colyseus.js": "^0.9.16",
+    "date-and-time": "^0.6.3",
     "socket.io-client": "^2.2.0",
     "yargs": "^13.2.2"
   }
